--- a/.gitignore
+++ b/.gitignore
@@ -163,7 +163,7 @@ artifacts/
 node_modules/
 jspm_packages/
 bower_components/
-AureliaVS2015/wwwroot/
+src\AureliaVS2015\wwwroot
 
 # RIA/Silverlight projects
 Generated_Code/
