--- a/src/AureliaVS2015/package.json
+++ b/src/AureliaVS2015/package.json
@@ -1,31 +1,45 @@
 {
-  "version": "1.0.0",
   "name": "AureliaVS2015",
-  "private": true,
+  "version": "0.0.1",  
   "devDependencies": {
-    "gulp": "^3.8.11",
-    "del": "^1.1.1",
-    "gulp-babel": "^5.1.0",
+    "aurelia-tools": "^0.1.3",
+    "browser-sync": "^1.8.1",
+    "conventional-changelog": "0.0.11",
+    "del": "^1.1.0",
+    "gulp": "^3.8.10",
     "gulp-less": "^3.0.3",
-    "gulp-sourcemaps": "^1.5.2"
+    "gulp-babel": "^5.1.0",
+    "gulp-bump": "^0.1.11",
+    "gulp-changed": "^1.1.0",
+    "gulp-jshint": "^1.9.0",
+    "gulp-plumber": "^0.6.6",
+    "gulp-protractor": "^0.0.12",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-yuidoc": "^0.1.2",
+    "jasmine-core": "^2.1.3",
+    "jshint-stylish": "^1.0.0",
+    "object.assign": "^1.0.3",
+    "require-dir": "^0.1.0",
+    "run-sequence": "^1.0.2",
+    "vinyl-paths": "^1.0.0",
+    "yargs": "^2.1.1"
   },
   "jspm": {
-    "directories": {
-      "baseURL": "wwwroot",
-      "lib": "wwwroot"
-    },
     "dependencies": {
-      "aurelia-bootstrapper": "github:aurelia/bootstrapper@^0.9.5",
-      "aurelia-dependency-injection": "github:aurelia/dependency-injection@^0.4.5",
-      "aurelia-framework": "github:aurelia/framework@^0.8.8",
-      "aurelia-http-client": "github:aurelia/http-client@^0.5.5",
-      "aurelia-router": "github:aurelia/router@^0.5.8",
+      "aurelia-animator-css": "github:aurelia/animator-css@^0.3.0",
+      "aurelia-bootstrapper": "github:aurelia/bootstrapper@^0.13.0",
+      "aurelia-dependency-injection": "github:aurelia/dependency-injection@^0.8.1",
+      "aurelia-framework": "github:aurelia/framework@^0.12.0",
+      "aurelia-http-client": "github:aurelia/http-client@^0.9.1",
+      "aurelia-router": "github:aurelia/router@^0.9.0",
       "bootstrap": "github:twbs/bootstrap@^3.3.4",
+      "css": "github:systemjs/plugin-css@^0.1.11",
       "font-awesome": "npm:font-awesome@^4.3.0"
     },
     "devDependencies": {
-      "traceur": "github:jmcriffey/bower-traceur@0.0.88",
-      "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.88"
+      "babel": "npm:babel-core@^5.1.13",
+      "babel-runtime": "npm:babel-runtime@^5.1.13",
+      "core-js": "npm:core-js@^0.9.4"
     }
   }
 }
