--- a/src/AureliaVS2015/project.json
+++ b/src/AureliaVS2015/project.json
@@ -1,16 +1,17 @@
 ﻿{
-  "webroot": "wwwroot",
+  "webroot": "",
   "version": "1.0.0-*",
 
   "dependencies": {
     "Microsoft.AspNet.Server.IIS": "1.0.0-beta4",
     "Microsoft.AspNet.Server.WebListener": "1.0.0-beta4",
     "Microsoft.AspNet.Diagnostics": "1.0.0-beta4",
-    "Microsoft.AspNet.StaticFiles": "1.0.0-beta4"
+    "Microsoft.AspNet.StaticFiles": "1.0.0-beta4",
+    "Microsoft.Framework.Runtime": "1.0.0-beta4"
   },
 
   "commands": {
-      "web": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.WebListener --server.urls http://localhost:5000/index.html"
+    "web": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.WebListener --server.urls http://localhost:5000"
   },
 
   "frameworks": {
